--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -184,15 +184,8 @@ Es frecuente realizar conversiones de un **Array a String**. Para ello se aplica
 ```javascript
 var array = ['Tierra', 'Mar', 'Aire'];
 
-var texto = array.join (' y ');
-
-console.log (texto);   // Tierra y Mar y Aire
-```
-
-```javascript
-// todo en una sola línea
-
-console.log (   ['Tierra', 'Mar', 'Aire'].join(' y ')   );   // Tierra y Mar y Aire
+                    array.join (' y ');    // "Tierra y Mar y Aire"
+['Tierra', 'Mar', 'Aire'].join (' y ');    // "Tierra y Mar y Aire"
 ```
 
 Si el método join no recibe ningún parámetro entonces la separación se realiza mediante comas.
@@ -203,15 +196,9 @@ También es frecuente realizar conversiones de un **String a Array**. Para ello 
 
 ```javascript
 var texto = 'Tierra y Mar y Aire';
-var array = texto.split (' y ');
 
-console.log (array);   // ["Tierra", "Mar", "Aire"]
-```
-
-```javascript
-// todo en una sola línea
-
-console.log (   'Tierra y Mar y Aire'.split(' y ')   );   // ["Tierra", "Mar", "Aire"]
+                texto.split (' y ');  // ["Tierra", "Mar", "Aire"] 
+'Tierra y Mar y Aire'.split (' y ');  // ["Tierra", "Mar", "Aire"]
 ```
 
 
