--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -49,7 +49,7 @@ typeof a;   // symbol
 
 ## Texto
 
-Existen 3 formas distintas de expresar un literal de texto:
+Existen **3 formas** distintas de expresar un literal de texto:
 
 ```javascript
 "Esto es una cadena de texto"
@@ -57,14 +57,14 @@ Existen 3 formas distintas de expresar un literal de texto:
 `Esto es una cadena de texto`
 ```
 
-Las 2 primeras son equivalentes. 
+**Las 2 primeras son equivalentes**. 
 
 ```javascript
 'Y me dijo: "Hola" '
 "La variable 'x' no está definida"
 ```
 
-La tercera forma se conoce como `template string` y fue introducida con ES2015. Permite mostrar el valor de variables y ejecutar código javascript sin tener que salir de la cadena de texto. 
+La **tercera forma** se conoce como **`template string`** y fue introducida con ES2015. Permite mostrar el valor de variables y ejecutar código javascript sin tener que salir de la cadena de texto. Además un característica interesante es que **permite cadenas multilínea**.
 
 
 Ejemplo usando `template string`
@@ -74,6 +74,10 @@ var x = 5;
 
 console.log ( `La variable 'x' vale ${x} unidades` );
 console.log ( `El cubo de 'x' es ${Math.pow(x,3)} unidades` );
+
+// multilínea
+console.log ( `El cubo de 'x' es 
+               ${Math.pow(x,3)} unidades` );
 ```
 
 Ejemplo tradicional usando operador de concatenación `+`
@@ -83,6 +87,9 @@ var x = 5;
 
 console.log ( "La variable 'x' vale "  + x + " unidades" );
 console.log ( "El cubo de 'x' es " + Math.pow(x,3) + " unidades" );
+
+// multilínea
+console.log ( "El cubo de 'x' es\n               " + Math.pow(x,3) + " unidades");
 ```
 
 
