--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -195,7 +195,11 @@ var array = ['Tierra', 'Mar', 'Aire'];
 ['Tierra', 'Mar', 'Aire'].join (' y ');    // "Tierra y Mar y Aire"
 ```
 
-Si el método join no recibe ningún parámetro entonces la separación se realiza mediante comas.
+Si el método join no recibe ningún parámetro entonces la separación se realiza mediante comas:
+
+```javascript
+['Tierra', 'Mar', 'Aire'].join ();   // "Tierra,Mar,Aire"
+```
 
 **split**
 
