--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -212,6 +212,11 @@ var texto = 'Tierra y Mar y Aire';
 'Tierra y Mar y Aire'.split (' y ');  // ["Tierra", "Mar", "Aire"]
 ```
 
+Si el método split no recibe ningún parámetro entonces se devuelve un array con un único elemento:
+
+```javascript
+'Tierra y Mar y Aire'.split ();       // ["Tierra y Mar y Aire"]
+```
 
 ## Objetos
 
