--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -193,4 +193,5 @@ Para el siguiente ejemplo, necesitarás obtener una API Key desde https://thedog
 
 - [XMLHttpRequest 2](https://www.html5rocks.com/en/tutorials/file/xhr2/)
 - [CORS](https://developer.mozilla.org/es/docs/Web/HTTP/Access_control_CORS)
-- [APIs públicas](https://github.com/toddmotto/public-apis)
+- [Algunas APIs Web públicas](https://github.com/toddmotto/public-apis)
+- [Muchas APIs Web públicas](https://www.programmableweb.com/category/all/apis)
