--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -17,14 +17,17 @@ palabras.length;            //  4
 
 // Métodos
 palabras.toString();        // "Esto,es,una,prueba"
+palabras;                   // ['Esto', 'es', 'una', 'prueba']
 
 palabras.concat([1,2,3]);   // ["Esto", "es", "una", "prueba", 1, 2, 3]
+palabras;                   // ['Esto', 'es', 'una', 'prueba']
 
 palabras.forEach ( function (elemento)  {
   console.log (elemento); 
 });
 ```
 
+> NOTA: **Los métodos toString y concat no modifican el array original**.
 
 ### Añadir elementos
 
@@ -143,7 +146,7 @@ Tres métodos muy interesantes para trabajar con arrays, y para objetos también
 - `filter` : Filtra los elementos deseados
 - `reduce` : Reduce los elementos a un valor
 
-> NOTA: Ninguno de estos métodos modifica el array.
+> NOTA: **Ninguno de estos métodos modifica el array**.
 
 ```javascript
 // Ejemplos
