--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -190,9 +190,9 @@ suma = numeros.reduce ( (acumulador, item) => acumulador + item,  0);
 
 ## Encadenamiento de métodos
 
-El encadenamiento de métodos es una técnica donde aplicamos a un objeto un método. A su vez al objeto resultante se le aplica otro método. Y así sucesivamente. Nos ahorramos así el declaración de objetos intermedios y el código se simplifica.
+El encadenamiento de métodos es una técnica donde aplicamos a un objeto un método. A su vez al objeto resultante se le aplica otro método. Y así sucesivamente. Nos ahorramos así la declaración de objetos intermedios y el código se simplifica.
 
-Como requisito debemos asegurarmos que el método que aplicamos es adecuado al objeto de trabajo.
+Como requisito debemos asegurarmos de que el método que aplicamos es adecuado al objeto de trabajo.
 
 ```javascript
 // Ejemplo: Calculamos el doble de cada número, luego filtramos los menores de 5 y después los sumamos
