--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -12,7 +12,7 @@ Un agente crea una petición HTTP de origen cruzado cuando solicita un recurso d
 >
 > Podemos ver si un servidor tiene activada dicha característica con el comando siguiente de bash. 
 >```bash
->curl -I https://api.github.com 2>&1  | grep Access-Control-Allow-Origin
+>curl -I https://api.github.com 2>&1  | grep -E "[Aa]ccess-[Cc]ontrol-[Aa]llow-[Oo]rigin"
 >```
 >Si nos aparece la siguiente línea, entonces es que el sitio permite **CORS**
 >
