spread operator & destructuring

--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -239,6 +239,74 @@ persona.altura   // 170
 for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
+
+## Propagación (spread operator)
+
+La sintaxis de propagación ( **`...`** ) permite que un iterable, como una expresión de array o una cadena, se expanda en lugares donde se esperan cero o más argumentos (para llamadas a funciones) o elementos (para literales de array), o que se expanda una expresión de objeto en lugares donde se esperan cero o más pares clave-valor (para objetos literales).
+
+Este operador es muy útil pues simplifica muchas operaciones realizadas sobre arrays y objetos.
+
+**Ejemplos**
+
+```javascript
+let numeros  = [1, 2, 3];
+let otros    = [4, 5, 6];
+let persona  = { nombre: 'Ana', edad: 23 };
+
+function suma(x, y, z) {
+  console.log (x + y + z);
+}
+
+// Para simplificar paso de argumentos a una función
+suma(...numeros);                 
+// suma(numeros[0], numeros[1], numeros[2]);
+
+// Para copiar objetos de forma superficial
+let persona2 = { ...persona };    
+// persona2 = Object.assign({}, persona); 
+
+// Para copiar arrays
+let nums = [...numeros];          
+// nums = numeros.slice();
+
+// Para asignar elementos a un array
+nums = [0, ...nums, 4];            
+// nums.unshift(0).push(4);              
+
+// Para concatenar 2 arrays
+numeros = [...numeros, ...otros]; 
+// numeros = numeros.concat(otros);
+```
+
+## Desestructuración (Destructuring)
+
+La sintaxis de asignación de desestructuración ( **`[]`**, **`{}`** ) es una expresión de JavaScript que hace posible desempaquetar elementos de arrays o propiedades de objetos en distintas variables. 
+
+**Ejemplos**
+
+```javascript
+// Con Arrays
+[a, b] = [10, 20];
+console.log(a); // 10
+console.log(b); // 20
+
+[a, b, ...rest] = [10, 20, 30, 40, 50];
+console.log(a); // 10
+console.log(b); // 20
+console.log(rest); // [30, 40, 50]
+
+// Con Objetos
+({ a, b } = { a: 10, b: 20 });
+console.log(a); // 10
+console.log(b); // 20
+
+({a, b, ...rest} = {a: 10, b: 20, c: 30, d: 40});
+console.log(a); // 10
+console.log(b); // 20
+console.log(rest); // {c: 30, d: 40}
+```
+
+
 # Declaración de variables
 
 A partir de ES6 se recomienda utilizar las palabra clave **`let`** en lugar de `var` para la declaración de variables. La razón es que `let` declara la variable en un ámbito de bloque al igual que la mayoría de los lenguajes de programación, lo cual es menos propenso a errores en el momento de la ejecución del código. Por contra, las variables declaradas con `var` siguen existiendo fuera del bloque en el cual fueron declaradas, estando únicamente limitadas en su visibilidad por la función en la que fueron declaradas.
