--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -62,16 +62,17 @@ Con la versión 2 además se pueden hacer petición de datos binarios (**blob** 
 
   <script>
 var xhr = new XMLHttpRequest();
-xhr.open('GET', 'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3', true);
+xhr.open('GET', 'https://rickandmortyapi.com/api/character/avatar/5.jpeg', true);
 xhr.responseType = 'blob';
 
 xhr.onload = function(e) {
   if (this.status == 200) {
     // Note: .response instead of .responseText
-    var blob = new Blob([this.response], {type: 'audio/mp3'});
+    var blob = new Blob([this.response], {type: 'image/jpeg'});
   }
 };
 
+// velocidad muy rápida por descargar archivo tamaño pequeño
 xhr.onprogress = function(e) {
    let progreso = document.getElementById('progreso');
    progreso.value = e.loaded;
