--- a/07.AJAX.md
+++ b/07.AJAX.md
@@ -86,6 +86,44 @@ xhr.send();
 </html>
 ```
 
+**Otro ejemplo**
+
+```html
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>XHR2 - Datos binarios y barra de progreso</title>
+</head>
+<body>
+
+  <progress id="progreso" value="0"></progress>
+
+  <script>
+var xhr = new XMLHttpRequest();
+xhr.open('GET', 'https://mainline.i3s.unice.fr/mooc/LaSueur.mp3', true);
+xhr.responseType = 'blob';
+
+xhr.onload = function(e) {
+  if (this.status == 200) {
+    // Note: .response instead of .responseText
+    var blob = new Blob([this.response], {type: 'audio/mp3'});
+  }
+};
+
+xhr.onprogress = function(e) {
+   let progreso = document.getElementById('progreso');
+   progreso.value = e.loaded;
+   progreso.max = e.total;
+}
+
+xhr.send();
+  </script>
+
+</body>
+</html>
+```
 
 ## fetch
 
