--- a/08.APIS.md
+++ b/08.APIS.md
@@ -23,171 +23,69 @@
 
 <hr>
 
-## Gráficos 3D
+## DOM
+
+**Document Object Model**
+
+El modelo de objeto de documento (DOM) conecta páginas web con scripts o lenguajes de programación al representar la estructura de un documento, como el HTML que representa una página web, en la memoria. Por lo general, se refiere a JavaScript, aunque el modelado de documentos HTML, SVG o XML como objetos no forma parte del lenguaje principal de JavaScript.
+
+El DOM representa un documento con un árbol lógico. Cada rama del árbol termina en un nodo y cada nodo contiene objetos. Los métodos DOM permiten el acceso programático al árbol. Con ellos, puede cambiar la estructura, el estilo o el contenido del documento.
+
+Los nodos también pueden tener controladores de eventos adjuntos. Una vez que se activa un evento, los controladores de eventos se ejecutan.
+
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/Document_Object_Model)
 
 <hr>
 
-### Three.js
+## fetch
 
-Framework construido sobre WebGL que facilita la **creación de gráficos 3D** en el navegador, utiliza un canvas + WebGL para mostrar la escena 3D.
+**El método fetch() inicia el proceso de obtener un recurso de la red, devolviendo una promesa que se cumple una vez que la respuesta está disponible.**
 
-**Sitio oficial**
+La API Fetch proporciona una interfaz para obtener recursos (incluso a través de la red). Le parecerá familiar a cualquiera que haya usado XMLHttpRequest, pero la nueva API proporciona un conjunto de funciones más potente y flexible.
 
-- https://threejs.org/
-
-**Ejemplos**
-
-- https://dddance.party/
-- http://vr.ff.com/us/
-- http://carvisualizer.plus360degrees.com/threejs/
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/Fetch_API)
 
 <hr>
 
-### Chart.js
+## WebSockets
 
-Biblioteca de **visualización de datos**. Facilita la generación y modificación de gráficos basados en datos. Su mejor característica es su facilidad de uso.
+**Permite a un servidor enviar mensajes al cliente**
 
-**Sitio oficial**
+WebSockets es una tecnología avanzada que hace posible abrir una sesión de comunicación interactiva entre el navegador del usuario y un servidor. Con esta API, puede enviar mensajes a un servidor y recibir respuestas controladas por eventos sin tener que consultar al servidor para una respuesta.
 
-- https://www.chartjs.org/
+- [Documentación](https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API)
 
-**Documentación y ejemplos**
 
-- https://www.chartjs.org/docs/latest/
-- https://www.chartjs.org/samples/latest/
+## Web Storage
 
+**Almacenamiento de datos en el cliente**
 
-<hr>
+La API de almacenamiento web proporciona los mecanismos mediante los cuales el navegador puede almacenar información de tipo clave/valor, de una forma mucho más intuitiva que utilizando cookies.
 
-### D3.js
+Los dos mecanismos en el almacenamiento web son los siguientes:
 
-Biblioteca de **visualización de datos**. Facilita la generación y modificación de gráficos basados en datos. 
+- **sessionStorage** mantiene un área de almacenamiento separada para cada origen que está disponible mientras dure la sesión de la página (mientras el navegador esté abierto, incluyendo recargas de página y restablecimientos).
+- **localStorage** hace lo mismo, pero persiste incluso cuando el navegador se cierre y se reabra.
 
-**Sitio oficial**
+- [Documentación](https://developer.mozilla.org/es/docs/Web/API/Web_Storage_API)
 
-- https://d3js.org/
 
-**Ejemplos**
+## Vibration
 
-- https://bl.ocks.org/mbostock/1062544
-- http://mbostock.github.io/d3/talk/20111018/collision.html
-- http://mbostock.github.io/d3/talk/20111116/force-collapsible.html
-- https://www.christophermanning.org/projects/building-cubic-hamiltonian-graphs-from-lcf-notation
-- https://bost.ocks.org/mike/nations/
-- https://bl.ocks.org/kerryrodden/7090426
+**Ofrece funcionalidad de vibración en dispositivos que lo soporten, como teléfonos móviles**
 
-**Galería**
+La mayoría de los dispositivos modernos pueden vibrar a través del hardware, esto permite que a través del código de software se pueda emitir estas vibraciones. La Vibration API ofrece a las aplicaciones web la capacidad de acceder a este hardware en caso este lo soporte, caso contrario el dispositivo no hace nada.
 
-- https://github.com/d3/d3/wiki/Gallery
+- [Documentación](https://developer.mozilla.org/es/docs/Web/API/Vibration_API)
 
-<hr>
 
-### Nivo
+## WebRTC
 
-Biblioteca de **visualización de datos**. Facilita la generación y modificación de gráficos basados en datos. Está basada en D3.js.
+**Web real-time communications o comunicaciones web en tiempo real**
 
+WebRTC es una tecnología que permite a aplicaciones y sitios web capturar y opcionalmente retransmitir audio/vídeo, así como intercambiar datos arbitrarios entre navegadores sin necesidad de un intermediario. El conjunto de estándares que comprende WebRTC hace posible compartir datos y realizar teleconferencias de igual-a-igual (peer-to-peer), sin requerir que el usuario instale complementos (plug-ins) o cualquier otro software de terceros.
 
-**Sitio oficial**
-
-- https://nivo.rocks
-
-**Ejemplos**
-
-- https://nivo.rocks/components
-
-**Editor gráfico**
-
-Existe un editor gráfico con el cual podemos diseñar gráficos de forma interactiva.
-
-- https://plouc.github.io/nivo-graph-editor/
-
-<hr>
-
-## Programación creativa
-
-<hr>
-
-### p5.js
-
-Framework de JavaScript de código abierto que hace que la creación de **medios visuales** con código en la web sea accesible para **artistas, diseñadores, educadores y principiantes**. Lauren McCarthy creó p5.js como alternativa nativa de JavaScript a [Processing](https://processing.org/). Prácticamente todo lo que puede hacerse en Processing también puede hacerse con p5.js.
-
-**Sitio oficial**
-
-- https://p5js.org
-- https://editor.p5js.org/p5/sketches  (Sketches en editor on-line)
-
-**Ejemplos**
-
-- https://editor.p5js.org/p5/sketches/Hybb4ekmum
-- https://editor.p5js.org/p5/sketches/SJYyEgyX_X
-- https://editor.p5js.org/p5/sketches/B1QefNeyQuX
-- https://editor.p5js.org/p5/sketches/HyeH4xJmOQ 
-- https://editor.p5js.org/p5/sketches/S1xN4x1muQ
-- https://editor.p5js.org/p5/sketches/BkZ14x1QdQ
-- https://editor.p5js.org/p5/sketches/rkqGNeJXum
-- https://editor.p5js.org/p5/sketches/HyvQNlymu7
-- https://editor.p5js.org/p5/sketches/BkNgxEly7uQ
-- https://editor.p5js.org/p5/sketches/SJngVlJQO7
-- https://editor.p5js.org/p5/sketches/SkelbNeJ7um
-
-**Free OnLine Course**
-
-Curso de **programación creativa**. Hace uso de Processing, pero puede aplicarse a p5.js.
-
-- [Video de introdución al curso](https://view.vzaar.com/1569932/video/hd)
-- https://www.futurelearn.com/courses/creative-coding 
-
-Existe un [grupo en Flickr](https://www.flickr.com/groups/2615752@N24/pool/) donde los alumnos de este curso publican las imágenes y animaciones generadas por ordenador usando Processing.
-
-
-<hr>
-
-## Testing
-
-<hr>
-
-### Jest
-
-Framework para la realización de **pruebas de unidad** con el foco puesto en la simplicidad.
-
-**Sitio web**
-
-- https://jestjs.io
-
-**Documentación y ejemplos**
-
-- https://jestjs.io/docs/en/getting-started
-
-<hr>
-
-### Cypress
-
-Framework "todo en uno" que incluye librerías de aserciones (**pruebas de unidad**), de mocks y **pruebas e2e (End to End)** automáticas sin utilizar Selenium.
-
-**Sitio web**
-
-- https://www.cypress.io/
-
-**Documentación y ejemplos**
-
-- https://docs.cypress.io/guides/overview/why-cypress.html
-- https://docs.cypress.io/examples/examples/recipes.html#Fundamentals
-
-
-<hr>
-
-### Playwright
-
-Playwright es una biblioteca de Node.js creada por Microsoft para **automatizar pruebas e2e  (End to End)** fiables de un extremo a otro para aplicaciones web modernas en **Chromium, Firefox y WebKit** con una única API. 
-
-**Sitio oficial**
-
-- https://playwright.dev/
-
-
-**Documentación y ejemplos**
-
-- https://playwright.dev/docs/intro
+- [Documentación](https://developer.mozilla.org/es/docs/Web/API/WebRTC_API)
 
 <hr>
 <hr>
