--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -29,6 +29,47 @@ palabras.forEach ( function (elemento)  {
 
 > NOTA: **Los métodos toString y concat no modifican el array original**.
 
+
+### Desestructuración
+
+https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment
+
+
+### Operador de expansión ...
+
+También llamado **spread operator** y representado por 3 puntos **...**, permite expandir (sacar del array) los elementos.
+
+***Ejemplo 1: Paso de parámetros a una función***
+
+
+```javascript
+function myFunction(x, y, z) { }
+
+let args = [0, 1, 2];
+
+myFunction(...args);
+```
+
+
+***Ejemplo 2: Copia superficial de un arrya***
+
+
+***Ejemplo 3: Concatenación de arrays***
+
+```javascript
+let arr1 = [0, 1, 2];
+let arr2 = [3, 4, 5];
+arr1 = [...arr1, ...arr2];
+
+// arr1 = arr1.concat(arr2);
+```
+
+Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
+
+https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Spread_syntax
+
+
+
 ### Añadir elementos
 
 - Al final del array:  `push`
