--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -240,7 +240,7 @@ for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
 
-## Propagación (spread operator)
+## Operarador de expansión (spread operator)
 
 La sintaxis de propagación ( **`...`** ) permite que un iterable, como una expresión de array o una cadena, se expanda en lugares donde se esperan cero o más argumentos (para llamadas a funciones) o elementos (para literales de array), o que se expanda una expresión de objeto en lugares donde se esperan cero o más pares clave-valor (para objetos literales).
 
