--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -424,7 +424,7 @@ fetch(URL)
 
 ## async / await
 
-Disponible a partir de ES7 (2016). Todavía se usa poco.
+Disponible a partir de ES7 (2016).
 
 Se puede declarar una función como `async`. Las funciones `async` son esencialmente una forma más limpia de trabajar con código asíncrono en JavaScript. 
 
