--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -441,7 +441,7 @@ async function hazAlgo () {
 **Ejemplo 1**
 
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 async function mostrar() {
   console.log("Inicio de recuperación de datos");
@@ -469,7 +469,7 @@ Finalización de recuperación de datos
 Si el código hubiera sido:
 
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 function mostrar() {
   console.log("Inicio de recuperación de datos");
@@ -494,6 +494,32 @@ undefined
 ```
 
 **Ejemplo 2**
+
+Es mucho más habitual encontrar el código anterior escrito de la siguiente forma:
+
+```javascript
+let URL = 'https://api.github.com/users/jamj2000';
+
+async function mostrar() {
+  console.log("Inicio de recuperación de datos");
+  
+  try {
+    const response = await fetch(URL);
+    const data     = await response.json();
+    console.log(data)
+  }
+  catch (error) {
+    console.log(`Error devuelto: ${error.code} - ${error.message}`);
+  }
+
+  console.log("Finalización de recuperación de datos");
+}
+
+mostrar();
+```
+
+
+**Ejemplo 3**
 
 ```javascript
 async function mensajes() {
