--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -51,7 +51,13 @@ myFunction(...args);
 ```
 
 
-***Ejemplo 2: Copia superficial de un arrya***
+***Ejemplo 2: Copia superficial de un array***
+
+```javascript
+let numeros  = [1, 2, 3];
+
+let nums = [...numeros]; 
+```
 
 
 ***Ejemplo 3: Concatenación de arrays***
