--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -32,22 +32,73 @@ palabras.forEach ( function (elemento)  {
 
 ### Desestructuración
 
+Se representa con **[  ]**, **permite desempacar valores**.
+
+Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
+
 https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment
+
+**Ejemplo 1: Asignación de valores a variables desde un array origen**
+
+```javascript
+let a, b;
+[a, b] = [10, 20];
+
+console.log(a); // 10
+console.log(b); // 20
+
+
+const x = [1, 2, 3, 4, 5];
+const [y, z] = x;
+
+console.log(y); // 1
+console.log(z); // 2
+```
+
+
+**Ejemplo 2: Intercambio de variables**
+
+```javascript
+let a = 1;
+let b = 3;
+
+[a, b] = [b, a];
+console.log(a); // 3
+console.log(b); // 1
+```
+
+**Ejemplo 3: Devolución de varios valores por una función**
+
+```javascript
+function f() {
+  return [1, 2];
+}
+
+let a, b;
+[a, b] = f();
+console.log(a); // 1
+console.log(b); // 2
+```
 
 
 ### Operador de expansión ...
 
-También llamado **spread operator** y representado por 3 puntos **...**, permite expandir (sacar del array) los elementos.
+También llamado **spread operator** y representado por 3 puntos **...**, **permite expandir (sacar del array) los elementos**.
+
+Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
+
+https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Spread_syntax
+
 
 ***Ejemplo 1: Paso de parámetros a una función***
 
 
 ```javascript
-function myFunction(x, y, z) { }
+function suma(x, y, z) { return x+y+z; }
 
 let args = [0, 1, 2];
 
-myFunction(...args);
+suma(...args);
 ```
 
 
@@ -69,11 +120,6 @@ arr1 = [...arr1, ...arr2];
 
 // arr1 = arr1.concat(arr2);
 ```
-
-Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
-
-https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Spread_syntax
-
 
 
 ### Añadir elementos
