--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -32,7 +32,7 @@ palabras.forEach ( function (elemento)  {
 
 ### Desestructuración
 
-Se representa con **[  ]**, **permite desempacar valores**.
+Se representa con **[  ]**, **permite desempacar valores de arrays en distintas variables**.
 
 Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
 
