--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -184,42 +184,72 @@ email.test ('pepe_lopez@ventas/tienda.com');  // false
 
 ### Desestructuración
 
+Se representa con **[  ]**, **permite desempacar propiedades de objetos en distintas variables**.
+
+Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
+
 https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment
+
+**Ejemplo 1: Asignación de valores a variables desde un objeto origen**
+
+```javascript
+const user = {
+    id: 42,
+    is_verified: true
+};
+
+const {id, is_verified} = user;
+
+console.log(id); // 42
+console.log(is_verified); // true
+```
+
+
+**Ejemplo 2: Desempacar campos de objetos pasados como parámetro de función**
+
+```javascript
+const usuario = {
+  id: 42,
+  nombre: 'jose',
+};
+
+function usuarioId({id}) {
+  return id;
+}
+
+console.log(usuarioId(usuario)); // 42
+```
 
 
 ### Operador de expansión ...
 
-También llamado **spread operator** y representado por 3 puntos **...**, permite expandir (sacar del array) los elementos.
-
-***Ejemplo 1: Paso de parámetros a una función***
-
-
-```javascript
-function myFunction(x, y, z) { }
-
-let args = [0, 1, 2];
-
-myFunction(...args);
-```
-
-
-***Ejemplo 2: Copia superficial de un arrya***
-
-
-***Ejemplo 3: Concatenación de arrays***
-
-```javascript
-let arr1 = [0, 1, 2];
-let arr2 = [3, 4, 5];
-arr1 = [...arr1, ...arr2];
-
-// arr1 = arr1.concat(arr2);
-```
+También llamado **spread operator** y representado por 3 puntos **...**, **permite expandir (sacar del objeto) las propiedades**.
 
 Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
 
 https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Spread_syntax
 
+
+***Ejemplo 1: Copia superficial de un objeto***
+
+
+```javascript
+var obj1 = { nombre: 'jose', edad: 42 };
+var objClonado = { ...obj1 };
+
+console.log(objClonado); // { nombre: "jose", edad: 42 }
+```
+
+
+***Ejemplo 2: Concatenación de propiedades***
+
+```javascript
+var obj1 = { nombre: 'jose', edad: 42 };
+var obj2 = { nombre: 'juan', peso: 73 };
+
+var obj3 = { ...obj1, ...obj2 };
+console.log(obj3) // { nombre: "juan", edad: 42, peso: 73 }
+```
 
 
 ## Hacer copia de un objeto 
