--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -184,7 +184,7 @@ email.test ('pepe_lopez@ventas/tienda.com');  // false
 
 ### Desestructuración
 
-Se representa con **[  ]**, **permite desempacar propiedades de objetos en distintas variables**.
+Se representa con **{  }**, **permite desempacar propiedades de objetos en distintas variables**.
 
 Se utiliza en numerosos ámbitos, para mayor información consultar el siguiente enlace:
 
