--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -275,8 +275,11 @@ let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1}
 ### Copia superficial (`Object.assign`)
 
 ```javascript
+let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1} };
+let copia_superficial = {};
+
 // shallow copy (copia superficial)
-let copia_superficial = Object.assign({}, persona);  
+Object.assign(copia_superficial, persona);  
 
 copia_superficial.nombre = "Juan";
 persona.nombre;        // "José";
@@ -291,6 +294,8 @@ persona.direccion.calle;         // "nueva"
 Para un clonado profundo, necesitamos usar otra alternativa ya que Object.assign() copia valores de propiedades. Si el valor en la fuente es una referencia a un objeto, solo se copia la referencia en sí, como valor de la propiedad.
 
 ```javascript
+let persona = { nombre:"José",  edad:30,  direccion: {calle: "antigua", num: 1} };
+
 // deep copy (copia profunda)
 let copia_profunda = JSON.parse(JSON.stringify(persona));
 
@@ -302,7 +307,7 @@ persona.direccion.calle;      // "nueva";
 
 ## Propiedades y métodos
 
-Los objetos tiene propiedades y métodos.
+Los objetos tienen propiedades y métodos.
 
 ```javascript
 let persona = {
