--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -98,7 +98,7 @@ function suma(x, y, z) { return x+y+z; }
 
 let args = [0, 1, 2];
 
-suma(...args);
+suma(...args);  // equivale a suma( args[0], args[1], args[2] )
 ```
 
 
