--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -301,7 +301,7 @@ let copia_profunda = JSON.parse(JSON.stringify(persona));
 
 // Se copian los valores de los objetos internos. Por tanto:
 copia_profunda.direccion.calle = "ancha";
-persona.direccion.calle;      // "nueva"; 
+persona.direccion.calle;      // "antigua"; 
 ```
 
 
@@ -367,7 +367,7 @@ pepe.saluda ('Buenos días');
 
 ### Utilizando la palabra clave `class`
 
-Sólo disponible a partir de ES6. Es azúcar sintáctico, puesto que en el fondo Javascript sigue siendo un lenguage basado en prototipos.
+Sólo disponible a partir de ES6. Es azúcar sintáctico, puesto que en el fondo Javascript sigue siendo un lenguaje basado en prototipos.
 
 
 ```javascript
