--- a/08.APIS.md
+++ b/08.APIS.md
@@ -81,5 +81,5 @@ WebRTC es una tecnología que permite a aplicaciones y sitios web capturar y opc
 
 ## Referencias
 
-- [MDN - Introducción a las APIs]([https://stateofjs.com/](https://developer.mozilla.org/es/docs/Learn/JavaScript/Client-side_web_APIs/Introduction))
+- [MDN - Introducción a las APIs](https://developer.mozilla.org/es/docs/Learn/JavaScript/Client-side_web_APIs/Introduction)
 - [MDN - Referencia de APIs](https://developer.mozilla.org/es/docs/Web/API)
