--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -16,7 +16,7 @@ let c = new String();    // objeto de clase String. A evitar. Debe usarse el tip
 let d = new Array();     // objeto de clase Array. A evitar. Debe usarse el tipo primitivo.
 let e = new Date();      // objeto de clase Date.
 let f = new RegExp();    // objeto de clase RegExp. A evitar.
-let g = new Function();  // objeto de clase Function. A evitar.
+let g = new Function();  //getElementbyclass objeto de clase Function. A evitar.
 let h = new Object();    // objeto de clase Object genérico. A evitar.
 ```
 
@@ -494,7 +494,7 @@ Métodos interesantes son:
 - remove
 - appendChild
 - getElementById
-- getElementByClassName
+- getElementsByClassName
 - querySelector
 - getAttribute
 - setAttribute
