--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -561,7 +561,7 @@ console.info  ('Mensaje de información');   // Muestra mensaje de información
 console.warn  ('Mensaje de aviso');         // Muestra mensaje de aviso
 console.error ('Mensaje de error');         // Muestra mensaje de error
 console.debug ('Mensaje de depuración');    // Muestra mensaje de depuración
-console.table (agenda);                     // Muestra en forma de tabla. Sólo disponible para el navegador, no Nodejs
+console.table (agenda);                     // Muestra en forma de tabla. Para navegador y nodejs
 ```
 
 > NOTA: **En NodeJS, el objeto console existe por si mismo**, es decir, en NodeJS no podemos escribir window.console.
