--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -549,10 +549,10 @@ Se utiliza para mostrar mensajes por consola.
 ```javascript
 
 let agenda = [
-  { nombre: 'José',  edad: 30 },
-  { nombre: 'Eva',   edad: 20 },
-  { nombre: 'Ana',   edad: 10 },
-  { nombre: 'Juana', edad: 18 }
+  { nombre: 'José',  telefono: 300300300 },
+  { nombre: 'Eva',   telefono: 200200200 },
+  { nombre: 'Ana',   telefono: 100100100 },
+  { nombre: 'Juana', telefono: 111222333 }
 ];
 
 console.clear ();                           // Limpia la consola
