--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -216,6 +216,7 @@ var trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cua
 ### Ordenar elementos
 
 ```javascript
+let numeros = [ 2, 20, 2, 1, 10, 1, 100 ];
 numeros.sort();                       // [1, 1, 10, 100, 2, 2, 20]
 numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 ```
@@ -226,10 +227,20 @@ numeros.reverse();                    // [20, 2, 2, 100, 10, 1, 1]
 >// para realizar una ordenación númerica pasamos una función de comparación
 >
 >numeros.sort( function(a, b){return a-b} );     // [1, 1, 2, 2, 10, 20, 100]  
->numeros.reverse( function(a, b){return a-b} );  // [100, 20, 10, 2, 2, 2, 1, 1]
+>numeros.reverse( function(a, b){return b-a} );  // [100, 20, 10, 2, 2, 2, 1, 1]
 >
->// function(a, b){return a-b} ) es la función que se usará para comparar dos valores.
+>// Podemos simplicar haciendo uso de funciones flecha
+>numeros.sort( (a, b) => a-b );     // [1, 1, 2, 2, 10, 20, 100]  
+>numeros.reverse( (a, b) => b-a );   // [100, 20, 10, 2, 2, 2, 1, 1]
+>
 >```
+
+> NOTA: **Los métodos anteriores modifican el array**.
+> Si deseamos que el array original no se modifique, usaremos la función `toSorted`.
+> ```javascript
+> let numsOrdenados   = numeros.toSorted( (a,b) => a-b ); // Orden ascendente
+> let numOrdenadosInv = numeros.toSorted( (a,b) => b-a ); // Orden descendente    
+> ```
 
 ### Tratar los elementos
 
