--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -220,7 +220,7 @@ Si el método split no recibe ningún parámetro entonces se devuelve un array c
 
 ## Objetos
 
-Colección de clave:valor separados por comas y dentro de llaves.
+**Colección de clave:valor separados por comas y dentro de llaves**.
 
 ```javascript
 var persona;
@@ -240,6 +240,47 @@ for (var i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
 
+Asignación de valores a las propiedades mediante variables
+
+```javascript
+let persona = { nombre: 'Jose', edad: 22 }
+  
+let miNombre = 'Juan'
+let miEdad = 33
+
+persona = { nombre: miNombre, edad: miEdad }    // { nombre: 'Juan', edad: 33 }
+
+let nombre = 'Eva'
+let edad = 11
+
+persona = { nombre: nombre, edad: edad }        // { nombre: 'Eva', edad: 11 }
+
+nombre = 'Ana'
+edad = 12
+
+persona = { nombre, edad }                     // { nombre: 'Ana', edad: 12 }
+// Cuando la clave y la variable que asigna
+// el valor se denominan de igual manera,
+// podemos simplificar la expresión
+
+
+// ----
+console.log (persona)                          // { nombre: 'Ana', edad: 12 }
+console.log ({ nombre, edad })                 // { nombre: 'Ana', edad: 12 }
+console.log ({ nombre })                       // { nombre: 'Ana' } 
+console.log ({ edad, nombre })                 // { edad: 12, nombre: 'Ana' } 
+console.log ({ edad, nombre, apellidos})       // Uncaught ReferenceError: apellidos is not defined
+```
+
+> **Recuerda:**
+> ```
+> persona = { nombre: nombre, edad: edad }
+> ``` 
+> podemos simplificarlo como
+> ```
+> persona = { nombre, edad }
+> ```
+> 
 ## Operarador de expansión (spread operator)
 
 La sintaxis de propagación ( **`...`** ) permite que un iterable, como una expresión de array o una cadena, se expanda en lugares donde se esperan cero o más argumentos (para llamadas a funciones) o elementos (para literales de array), o que se expanda una expresión de objeto en lugares donde se esperan cero o más pares clave-valor (para objetos literales).
