--- a/02.SINTAXIS.md
+++ b/02.SINTAXIS.md
@@ -18,7 +18,7 @@
 
 
 ```javascript
-var a;
+let a;
 typeof a;   // undefined
 
 a = 23;
@@ -70,7 +70,7 @@ La **tercera forma** se conoce como **`template string`** y fue introducida con 
 Ejemplo usando `template string`
 
 ```javascript
-var x = 5;
+let x = 5;
 
 console.log ( `La variable 'x' vale ${x} unidades` );
 console.log ( `El cubo de 'x' es ${Math.pow(x,3)} unidades` );
@@ -83,7 +83,7 @@ console.log ( `El cubo de 'x' es
 Ejemplo tradicional usando operador de concatenación `+`
 
 ```javascript
-var x = 5;
+let x = 5;
 
 console.log ( "La variable 'x' vale "  + x + " unidades" );
 console.log ( "El cubo de 'x' es " + Math.pow(x,3) + " unidades" );
@@ -103,9 +103,9 @@ console.log ( "El cubo de 'x' es\n               " + Math.pow(x,3) + " unidades"
 ## Conversión entre texto y números
 
 ```javascript 
-var a = "12";       // es string
-var b = "23.01";    // es string
-var c = 50;         // es number
+let a = "12";       // es string
+let b = "23.01";    // es string
+let c = 50;         // es number
 
 console.log ( c + c );  // 100
 
@@ -120,8 +120,8 @@ c.toString();                      // "50", es string
 
 > ACTIVIDAD PROPUESTA: Ejecuta las siguientes sentencias y explica que hacen:
 >```javascript
->    var a = "FF";
->    var b = "1010";
+>    let a = "FF";
+>    let b = "1010";
 >
 >    parseInt (a, 16);
 >    
@@ -129,8 +129,8 @@ c.toString();                      // "50", es string
 >    parseInt (b, 3);
 >    parseInt (b, 10);
 >
->    var c = 10;
->    var d = 255;
+>    let c = 10;
+>    let d = 255;
 >
 >    c.toString(2);
 >    d.toString(16);
@@ -139,8 +139,8 @@ c.toString();                      // "50", es string
 ## Operadores
 
 ```javascript 
-var a = 11;
-var b = "11";
+let a = 11;
+let b = "11";
 
 a == b;   // true
 a === b;  // false
@@ -161,7 +161,7 @@ En Javascript, a diferencia de otros lenguajes, los valores no tienen por que se
 
 
 ```javascript
-var a;
+let a;
 
 a = [ 100, 200, 23 ]; 
 
@@ -179,7 +179,7 @@ a[1]   // "hola"
 a[2]   // true
 
 // para mostrarlos por pantalla con bucle for in
-for (var i in a)  console.log (i + " ---> " + a[i]);
+for (let i in a)  console.log (i + " ---> " + a[i]);
 ```
 
 ### Array ⇄ String
@@ -189,7 +189,7 @@ for (var i in a)  console.log (i + " ---> " + a[i]);
 Es frecuente realizar conversiones de un **Array a String**. Para ello se aplica el método **join** al array. Dicho método recibe una cadena de texto como separador.
 
 ```javascript
-var array = ['Tierra', 'Mar', 'Aire'];
+let array = ['Tierra', 'Mar', 'Aire'];
 
                     array.join (' y ');    // "Tierra y Mar y Aire"
 ['Tierra', 'Mar', 'Aire'].join (' y ');    // "Tierra y Mar y Aire"
@@ -206,7 +206,7 @@ Si el método join no recibe ningún parámetro entonces la separación se reali
 También es frecuente realizar conversiones de un **String a Array**. Para ello se aplica el método **split** al string. Dicho método recibe una cadena de texto como separador.
 
 ```javascript
-var texto = 'Tierra y Mar y Aire';
+let texto = 'Tierra y Mar y Aire';
 
                 texto.split (' y ');  // ["Tierra", "Mar", "Aire"] 
 'Tierra y Mar y Aire'.split (' y ');  // ["Tierra", "Mar", "Aire"]
@@ -223,7 +223,7 @@ Si el método split no recibe ningún parámetro entonces se devuelve un array c
 **Colección de clave:valor separados por comas y dentro de llaves**.
 
 ```javascript
-var persona;
+let persona;
 
 persona = { nombre:"José",  edad:30,  altura:170 };
 
@@ -236,7 +236,7 @@ persona.edad     // 30
 persona.altura   // 170
 
 // para mostrarlas por pantalla con bucle for in
-for (var i in persona)  console.log (i + " ---> " + persona[i]);
+for (let i in persona)  console.log (i + " ---> " + persona[i]);
 ```
 
 
