--- a/03.FUNCIONES.md
+++ b/03.FUNCIONES.md
@@ -43,7 +43,7 @@ function (a, b) { return a + b; }  // ¿Cómo hago una llamada a esta función??
 ## A través de una variable asociada
 
 ```javascript
-var suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
+let suma = function (a, b) { return a + b; } ; // puedo asignarla a una variable
 
 suma (2, 3);                                   // ahora sí puedo invocar la función a través de la variable asociada
 ```
@@ -293,7 +293,7 @@ hazAlgo ()
 
 *Forma 1: con funciones nominadas*
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 function callback(response)  {
     console.log (response);
@@ -329,7 +329,7 @@ En este caso pueden darse 3 situaciones:
 *Forma 2: con funciones anónimas*
 
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
   .then(function(response) {
@@ -343,7 +343,7 @@ fetch(URL)
 *Forma 3: con funciones flecha*
 
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
   .then((response) =>  console.log (response))
@@ -353,7 +353,7 @@ fetch(URL)
 Un código más práctico es el siguiente. 
 
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
   .then ((response) => response.json() )
@@ -376,7 +376,7 @@ hazAlgo ()
 
 *Forma 1: con funciones nominadas*
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 // En este ejemplo las 2 funciones siguientes se comportan de la misma manera
 function exitoCallbackResolve (res) {
@@ -398,7 +398,7 @@ fetch(URL)
 
 *Forma 2: con funciones anónimas*
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
   .then(function(resolve) {
@@ -414,7 +414,7 @@ fetch(URL)
 
 *Forma 3: con funciones flecha*
 ```javascript
-var URL = 'https://api.github.com/users/jamj2000';
+let URL = 'https://api.github.com/users/jamj2000';
 
 fetch(URL)
   .then((resolve) => console.log (resolve.status) , (reject) => console.log (reject.status) )
