--- a/04.ARRAYS.md
+++ b/04.ARRAYS.md
@@ -2,10 +2,10 @@
 
 ```javascript
 // Declaración de array vacío
-var numeros = [];          
+let numeros = [];          
 
  // Declaración de array con 4 elementos
-var palabras = ['Esto', 'es', 'una', 'prueba'];
+let palabras = ['Esto', 'es', 'una', 'prueba'];
 ```
 
 ### Propiedades y métodos básicos
@@ -132,13 +132,13 @@ arr1 = [...arr1, ...arr2];
 ```javascript
 numeros.push (100, 20, 10);           // [ 100, 20, 10 ]
 
-var n = numeros.push (1, 1, 2, 2, 3); // [ 100, 20, 10, 1, 1, 2, 2, 3 ],  n=8 ( es la longitud )
+let n = numeros.push (1, 1, 2, 2, 3); // [ 100, 20, 10, 1, 1, 2, 2, 3 ],  n=8 ( es la longitud )
 ```
 
 **Al principio del array**
 
 ```javascript
-var n = numeros.unshift (50, 40, 30); // [50, 40, 30, 100, 20, 10, 1, 1, 2, 2, 3] n=11 ( es la longitud)
+let n = numeros.unshift (50, 40, 30); // [50, 40, 30, 100, 20, 10, 1, 1, 2, 2, 3] n=11 ( es la longitud)
 ```
 
 **En cualquier posición**
@@ -163,20 +163,20 @@ numeros.splice(3, 0, 400, 300, 200);   // [50, 40, 30, 400, 300, 200, 100, 20, 1
 **Al final del array**
 
 ```javascript
-var z = numeros.pop ();   // [ 50, 40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ],  z=3 ( es el elemento extraido )
+let z = numeros.pop ();   // [ 50, 40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ],  z=3 ( es el elemento extraido )
 ```
 
 **Al principio del array**
 
 ```javascript
-var a = numeros.shift (); // [40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ], a=50 ( es el elemento extraido)
+let a = numeros.shift (); // [40, 30, 400, 300, 200, 100, 20, 10, 1, 1, 2, 2 ], a=50 ( es el elemento extraido)
 ```
 
 
 **En cualquier posición**
 
 ```javascript
-var extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , extraido = [ 400, 300, 200 ]
+let extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , extraido = [ 400, 300, 200 ]
 ```
 
 > NOTA: los métodos `pop` y `shift` sólo pueden extraer un elemento cada vez. 
@@ -189,18 +189,18 @@ var extraido = numeros.splice (2, 3);   // [40, 30, 100, 20, 10, 1, 1, 2, 2 ] , 
 // el método slice tiene la siguiente forma:
 // array.slice (pos_inicio, pos_final);     
 
-var nuevo = numeros.slice();              // todos los elementos
-var trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cuarto, sin incluir este último
+let nuevo = numeros.slice();              // todos los elementos
+let trozo = numeros.slice(1, 3);          // desde elemento segundo hasta el cuarto, sin incluir este último
 ```
 
-> NOTA: el código `var nuevo = numeros`, no hace una copia. 
+> NOTA: el código `let nuevo = numeros`, no hace una copia. 
 >
 > Simplemente crea una referencia o "alias" llamado `nuevo` que apunta al mismo sitio que `numeros`.
 > Cualquier cambio en el array se ve reflejado en ambas variables.
 >
 >```javascript
->var numeros = [ 1, 2, 3 ];
->var nuevo = numeros;
+>let numeros = [ 1, 2, 3 ];
+>let nuevo = numeros;
 >
 >numeros.pop();      // nuevo = [ 1, 2 ] 
 >```
@@ -255,10 +255,10 @@ Tres métodos muy interesantes para trabajar con arrays, y para objetos también
 ```javascript
 // Ejemplos
 
-var numeros = [ 1, 4, 2, 3, 5, 2, 1 ];
-var cuadrados = [];
-var filtrados = [];
-var suma = [];
+let numeros = [ 1, 4, 2, 3, 5, 2, 1 ];
+let cuadrados = [];
+let filtrados = [];
+let suma = [];
 
 // Utilizando map para calcular el cuadrado de cada elemento
 cuadrados = numeros.map( item => item * item );        // cuadrados = [ 1, 16, 4, 9, 25, 4, 1 ]  
@@ -283,7 +283,7 @@ suma = numeros.reduce ( (acumulador, item) => acumulador + item,  0);
 > - ¿Qué resultado obtenemos si ejecutamos las siguientes sentencias? 
 >
 > ```javascript
->    var resultado;
+>    let resultado;
 >    
 >    resultado = filtrados.reduce ( (acumulador, item) => acumulador + item,  10);
 >    resultado = filtrados.reduce ( (acumulador, item) => acumulador * item,  1);
@@ -332,9 +332,9 @@ Si no hubieses empleado encadenamiento de métodos, el código sería el siguien
 
 ```javascript
 
-var resultado1 = numeros.map ( item => 2 * item );
-var resultado2 = resultado1.filter ( item => item < 5 );
-var resultado3 = resultado2.reduce ( (acumulador, item) => acumulador + item, 0);
+let resultado1 = numeros.map ( item => 2 * item );
+let resultado2 = resultado1.filter ( item => item < 5 );
+let resultado3 = resultado2.reduce ( (acumulador, item) => acumulador + item, 0);
 
 // resultado final en resultado3
 ```
@@ -348,7 +348,7 @@ El encadenamiento de métodos es una técnica que podemos utilizar siempre que s
 >
 >```javascript
 >
->var desarrolladores = [
+>let desarrolladores = [
 >  { nombre: 'Juan', tipo: 'móvil', edad: 24 },
 >  { nombre: 'Inma', tipo: 'móvil', edad: 31 },
 >  { nombre: 'Ana',  tipo: 'web',   edad: 25 },
@@ -357,7 +357,7 @@ El encadenamiento de métodos es una técnica que podemos utilizar siempre que s
 >];
 >
 >
->var sumaEdadWeb = desarrolladores
+>let sumaEdadWeb = desarrolladores
 >                 .filter ( x => x.tipo === 'web')
 >                 .map    ( x => x.edad)
 >                 .reduce ((acumulador, item) => acumulador + item, 0);
