--- a/05.OBJETOS.md
+++ b/05.OBJETOS.md
@@ -234,8 +234,8 @@ https://developer.mozilla.org/es/docs/Web/JavaScript/Reference/Operators/Spread_
 
 
 ```javascript
-var obj1 = { nombre: 'jose', edad: 42 };
-var objClonado = { ...obj1 };
+let obj1 = { nombre: 'jose', edad: 42 };
+let objClonado = { ...obj1 };
 
 console.log(objClonado); // { nombre: "jose", edad: 42 }
 ```
@@ -244,10 +244,10 @@ console.log(objClonado); // { nombre: "jose", edad: 42 }
 ***Ejemplo 2: Concatenación de propiedades***
 
 ```javascript
-var obj1 = { nombre: 'jose', edad: 42 };
-var obj2 = { nombre: 'juan', peso: 73 };
+let obj1 = { nombre: 'jose', edad: 42 };
+let obj2 = { nombre: 'juan', peso: 73 };
 
-var obj3 = { ...obj1, ...obj2 };
+let obj3 = { ...obj1, ...obj2 };
 console.log(obj3) // { nombre: "juan", edad: 42, peso: 73 }
 ```
 
